<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:id="@+id/main_container"
    >

    <include layout="@layout/header" android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        app:layout_constraintTop_toTopOf="@+id/main_container"
        app:layout_constraintLeft_toLeftOf="@id/main_container"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Auth"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:textSize="22sp"
                android:textColor="@color/black"
                />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                >
                <EditText android:id="@+id/login_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/login"
                    android:layout_margin="15dp"
                    />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                >
                <EditText android:id="@+id/password_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/password"
                    android:layout_margin="15dp"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton android:id="@+id/log_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:backgroundTint="@color/main_blue_color"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                app:cornerRadius="@dimen/button_corner_radius"
                android:textSize="@dimen/button_text_size"
                />

            <TextView android:id="@+id/doesnt_have_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doesnt_have_an_acc"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>