<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:id="@+id/main_container"
    >
    <include layout="@layout/navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/main_container"
        app:layout_constraintLeft_toLeftOf="@id/main_container"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/main_container"
        app:layout_constraintLeft_toLeftOf="@id/main_container"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@id/main_container"
        app:layout_constraintLeft_toLeftOf="@id/main_container"
        >
        <include layout="@layout/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:textSize="22sp"
            android:textColor="@color/black"
            />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            >
            <EditText android:id="@+id/login_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="none"
                android:hint="@string/login"
                android:layout_margin="15dp"
                />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            >
            <EditText android:id="@+id/phone_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="none"
                android:hint="@string/phone_number"
                android:layout_margin="15dp"
                />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            >
            <EditText android:id="@+id/first_name_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="none"
                android:hint="@string/first_name"
                android:layout_margin="15dp"
                />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            >
            <EditText android:id="@+id/second_name_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="none"
                android:hint="@string/second_name"
                android:layout_margin="15dp"
                />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            >
            <EditText android:id="@+id/email_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="none"
                android:hint="@string/email"
                android:layout_margin="15dp"
                />
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>