<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="0dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        >

        <LinearLayout android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/navbar_icons_margin"
            android:layout_marginLeft="@dimen/navbar_icons_margin"
            >
            <ImageView
                android:layout_width="20dp"
                android:layout_height="22dp"
                android:src="@drawable/icon_home"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                />
        </LinearLayout>

        <LinearLayout android:id="@+id/catalog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/navbar_icons_margin"
            android:layout_marginLeft="@dimen/navbar_icons_margin"
            >
            <ImageView
                android:layout_width="20dp"
                android:layout_height="22dp"
                android:src="@drawable/icon_catalog"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/catalog"
                />
        </LinearLayout>

        <LinearLayout android:id="@+id/cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/navbar_icons_margin"
            android:layout_marginLeft="@dimen/navbar_icons_margin"
            >
            <ImageView
                android:layout_width="20dp"
                android:layout_height="22dp"
                android:src="@drawable/icon_cart"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart"
                />
        </LinearLayout>

        <LinearLayout android:id="@+id/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/navbar_icons_margin"
            android:layout_marginLeft="@dimen/navbar_icons_margin"
            >
            <ImageView
                android:layout_width="20dp"
                android:layout_height="22dp"
                android:src="@drawable/icon_account"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>